flame/flame-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flame
  namespace: flame
spec:
  selector:
    matchLabels:
      app: flame
  replicas: 1
  template:
    metadata:
      labels:
        app: flame
    spec:
      serviceAccountName: flame
      containers:
      - name: flame
        image: ghcr.io/fdarveau/flame
        ports:
        - containerPort: 5005
        command: ['/bin/sh']
        args: ['+x', '-c', 'apk add --no-cache patch && patch -l -N -t -p3 -i /mnt/patches/dot-name-bug.patch /app/controllers/apps/docker/useKubernetes.js && node server.js']
        volumeMounts:
        - name: flame-patches
          mountPath: /mnt/patches
        - name: flame-config
          mountPath: /app/data/config.json
          subPath: config.json
      volumes:
      - name: flame-patches
        hostPath:
          path: /mnt/pepperpool/flame/patches
      - name: flame-config
        configMap:
          name: flame-config
