flame/flame-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flame
  namespace: flame
spec:
  selector:
    app: flame
  ports:
    - name: http
      port: 5005
      protocol: TCP
      targetPort: 5005
  type: ClusterIP
