flame/flame-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame
  namespace: flame
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: MDAPI Home (dev)
    flame.pawelmalak/.name: MDAPI Home (dev)
    flame.pawelmalak/url: https://dev.mdapi.ch
    flame.pawelmalak/category: General
    flame.pawelmalak/icon: home
    flame.pawelmalak/order: '50'
spec:
  ingressClassName: nginx
  rules:
    - host: dev.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: flame
                port:
                  number: 5005
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - dev.mdapi.ch
      secretName: flame-cert
