flame/stub-ciphertrust.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-ciphertrust
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: CipherTrust
    flame.pawelmalak/url: https://cm.home.tillo.ch
    flame.pawelmalak/category: Storage
    flame.pawelmalak/icon: shield-lock
    flame.pawelmalak/order: '40'
spec:
  ingressClassName: none
  rules: []
