flame/stub-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-dev
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Dev Cluster
    flame.pawelmalak/url: https://rancher.home.tillo.ch/dashboard/c/c-gcwcx/explorer
    flame.pawelmalak/category: Cluster
    flame.pawelmalak/icon: source-branch
    flame.pawelmalak/order: '30'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
