flame/stub-docs.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-docs
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Docs
    flame.pawelmalak/url: https://docs.mdapi.ch
    flame.pawelmalak/category: Infrastructure
    flame.pawelmalak/icon: book-open-variant
    flame.pawelmalak/order: '60'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
