flame/stub-ftth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-ftth
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: FTTH
    flame.pawelmalak/url: https://ftth.mdapi.ch
    flame.pawelmalak/category: Network
    flame.pawelmalak/icon: router
    flame.pawelmalak/order: '20'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
