flame/stub-gitlab.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-gitlab
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: GitLab
    flame.pawelmalak/url: https://gitlab.mdapi.ch
    flame.pawelmalak/category: Ops
    flame.pawelmalak/icon: gitlab
    flame.pawelmalak/order: '10'
spec:
  ingressClassName: none
  rules: []
