flame/stub-harvester.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-harvester
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Harvester
    flame.pawelmalak/url: https://harvester.mdapi.ch
    flame.pawelmalak/category: Cluster
    flame.pawelmalak/icon: layers-triple
    flame.pawelmalak/order: '20'
spec:
  ingressClassName: none
  rules: []
