flame/stub-minio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-minio
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: MinIO
    flame.pawelmalak/url: https://console.minio.home.tillo.ch
    flame.pawelmalak/category: Storage
    flame.pawelmalak/icon: bucket
    flame.pawelmalak/order: '30'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
