flame/stub-nextcloud.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-nextcloud
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Nextcloud
    flame.pawelmalak/url: https://cloud.envuassu.ch
    flame.pawelmalak/category: Envuassu
    flame.pawelmalak/icon: cloud
    flame.pawelmalak/order: '20'
spec:
  ingressClassName: none
