flame/stub-pfsense.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-pfsense
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: pfSense
    flame.pawelmalak/url: https://pfsense.mdapi.ch
    flame.pawelmalak/category: Network
    flame.pawelmalak/icon: router-network
    flame.pawelmalak/order: '10'
spec:
  ingressClassName: none
