flame/stub-rancher.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-rancher
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Rancher
    flame.pawelmalak/url: https://rancher.home.tillo.ch
    flame.pawelmalak/category: Infrastructure
    flame.pawelmalak/icon: server-network
    flame.pawelmalak/order: '10'
spec:
  ingressClassName: none
