flame/stub-santillo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-santillo
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Santillo
    flame.pawelmalak/url: https://santillo.tillo.ch
    flame.pawelmalak/category: Storage
    flame.pawelmalak/icon: nas
    flame.pawelmalak/order: '30'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
