flame/stub-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stub-test
  namespace: flame
  annotations:
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Test Cluster
    flame.pawelmalak/url: https://rancher.home.tillo.ch/dashboard/c/c-rackspacetest2/explorer
    flame.pawelmalak/category: Cluster
    flame.pawelmalak/icon: test-tube
    flame.pawelmalak/order: '40'
spec:
  ingressClassName: none
  defaultBackend:
    service:
      name: stub
      port:
        number: 80
